Implement Singleton Auxiliary class (#20)
* Implement Singleton Auxiliary class

Signed-off-by: jparisu <javierparis@eprosima.com>

* Implement tests

Signed-off-by: jparisu <javierparis@eprosima.com>

* Implement order related tests

Signed-off-by: jparisu <javierparis@eprosima.com>

* Add documentation

Signed-off-by: jparisu <javierparis@eprosima.com>

* fix windows issues

Signed-off-by: jparisu <javierparis@eprosima.com>

* apply suggestions

Signed-off-by: jparisu <javierparis@eprosima.com>

* uncrustify

Signed-off-by: jparisu <javierparis@eprosima.com>

Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/cpp_utils/test/unittest/types/CMakeLists.txt
+++ b/cpp_utils/test/unittest/types/CMakeLists.txt
@@ -12,6 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+############################
+# FUZZY TEST
+############################
+
 set(TEST_NAME fuzzyTest)
 
 set(TEST_SOURCES
@@ -27,6 +31,79 @@ set(TEST_LIST
     )
 
 set(TEST_EXTRA_LIBRARIES
+    )
+
+set(TEST_NEEDED_SOURCES
+    )
+
+add_unittest_executable(
+        "${TEST_NAME}"
+        "${TEST_SOURCES}"
+        "${TEST_LIST}"
+        "${TEST_EXTRA_LIBRARIES}"
+        "${TEST_NEEDED_SOURCES}"
+    )
+
+############################
+# SINGLETON TEST
+############################
+
+set(TEST_NAME singletonTest)
+
+set(TEST_SOURCES
+        singletonTest.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/wait/BooleanWaitHandler.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/utils.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/time/time_utils.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/Formatter.cpp
+    )
+
+set(TEST_LIST
+        trivial_get_instance
+        different_index_class
+    )
+
+set(TEST_EXTRA_LIBRARIES
+        fastcdr
+        fastrtps
+        $<$<BOOL:${WIN32}>:iphlpapi$<SEMICOLON>Shlwapi>
+    )
+
+set(TEST_NEEDED_SOURCES
+    )
+
+add_unittest_executable(
+        "${TEST_NAME}"
+        "${TEST_SOURCES}"
+        "${TEST_LIST}"
+        "${TEST_EXTRA_LIBRARIES}"
+        "${TEST_NEEDED_SOURCES}"
+    )
+
+
+############################
+# SINGLETON ORDER TEST
+############################
+
+set(TEST_NAME singletonOrderTest)
+
+set(TEST_SOURCES
+        singletonOrderTest.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/wait/BooleanWaitHandler.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/utils.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/time/time_utils.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/Formatter.cpp
+    )
+
+set(TEST_LIST
+        correct_construction_order
+        correct_destruction_order
+    )
+
+set(TEST_EXTRA_LIBRARIES
+        fastcdr
+        fastrtps
+        $<$<BOOL:${WIN32}>:iphlpapi$<SEMICOLON>Shlwapi>
     )
 
 set(TEST_NEEDED_SOURCES
