Implement random manager class (#19)
* Implement random manager class

Signed-off-by: jparisu <javierparis@eprosima.com>

* Add test implementation

Signed-off-by: jparisu <javierparis@eprosima.com>

* Add documentation

Signed-off-by: jparisu <javierparis@eprosima.com>

* fix windows issues

Signed-off-by: jparisu <javierparis@eprosima.com>

* apply suggesstions

Signed-off-by: jparisu <javierparis@eprosima.com>

* Add new features and test

Signed-off-by: jparisu <javierparis@eprosima.com>

* Implement TSafe manager

Signed-off-by: jparisu <javierparis@eprosima.com>

* apply suggestions

Signed-off-by: jparisu <javierparis@eprosima.com>

* uncrustify

Signed-off-by: jparisu <javierparis@eprosima.com>

* apply suggestions

Signed-off-by: jparisu <javierparis@eprosima.com>

Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/cpp_utils/test/unittest/CMakeLists.txt
+++ b/cpp_utils/test/unittest/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(exception)
 add_subdirectory(types)
 add_subdirectory(macros)
 add_subdirectory(math)
+add_subdirectory(math/random)
 add_subdirectory(memory)
 add_subdirectory(return_code)
 add_subdirectory(testing)
