--- a/cpp_utils/test/unittest/threading/connector/CMakeLists.txt
+++ b/cpp_utils/test/unittest/threading/connector/CMakeLists.txt
@@ -10,7 +10,7 @@ set(TEST_SOURCES
         one_shot_connector_test.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/exception/Exception.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/Formatter.cpp
-        ${PROJECT_SOURCE_DIR}/src/cpp/math/math.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/math/math_extension.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/threading/task/OwnedTask.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/threading/manager/StdThreadPool.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/time/time_utils.cpp
@@ -50,7 +50,7 @@ set(TEST_SOURCES
         slot_connector_test.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/exception/Exception.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/Formatter.cpp
-        ${PROJECT_SOURCE_DIR}/src/cpp/math/math.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/math/math_extension.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/threading/task/OwnedTask.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/threading/manager/StdThreadPool.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/time/time_utils.cpp
