--- a/cpp_utils/test/unittest/types/CMakeLists.txt
+++ b/cpp_utils/test/unittest/types/CMakeLists.txt
@@ -56,6 +56,7 @@ set(TEST_SOURCES
         ${PROJECT_SOURCE_DIR}/src/cpp/utils.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/time/time_utils.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/Formatter.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/exception/Exception.cpp
     )
 
 set(TEST_LIST
@@ -93,6 +94,7 @@ set(TEST_SOURCES
         ${PROJECT_SOURCE_DIR}/src/cpp/utils.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/time/time_utils.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/Formatter.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/exception/Exception.cpp
     )
 
 set(TEST_LIST
