--- a/cpp_utils/test/unittest/file/CMakeLists.txt
+++ b/cpp_utils/test/unittest/file/CMakeLists.txt
@@ -20,6 +20,7 @@ set(TEST_SOURCES
         ${PROJECT_SOURCE_DIR}/src/cpp/Formatter.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/file/file_utils.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/utils.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/math/math_extension.cpp
     )
 
 set(TEST_LIST
