--- a/cpp_utils/test/unittest/testing/CMakeLists.txt
+++ b/cpp_utils/test/unittest/testing/CMakeLists.txt
@@ -23,6 +23,7 @@ set(TEST_SOURCES
         ${PROJECT_SOURCE_DIR}/src/cpp/exception/Exception.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/utils.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/Formatter.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/math/math_extension.cpp
     )
 
 set(TEST_LIST
