Implement Heritable by shared Ptr
Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/cpp_utils/test/unittest/memory/CMakeLists.txt
+++ b/cpp_utils/test/unittest/memory/CMakeLists.txt
@@ -91,11 +91,10 @@ set(TEST_SOURCES
 
 set(TEST_LIST
         constructor_int
-        constructor_string
+        constructor_parent
         ptr_operator_parent
         compare_operator_parent
         access_data_methods_parent
-        cast_operator
         cast_methods
         cast_methods_negative
         inheritance_set_test
