Add serialize method
Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/cpp_utils/test/unittest/memory/CMakeLists.txt
+++ b/cpp_utils/test/unittest/memory/CMakeLists.txt
@@ -97,6 +97,7 @@ set(TEST_LIST
         access_data_methods_parent
         cast_methods
         cast_methods_negative
+        serialize_operator
         inheritance_set_test
     )
 
