--- a/cpp_utils/test/unittest/memory/CMakeLists.txt
+++ b/cpp_utils/test/unittest/memory/CMakeLists.txt
@@ -76,3 +76,39 @@ add_unittest_executable(
         "${TEST_LIST}"
         "${TEST_EXTRA_LIBRARIES}"
     )
+
+#####################################
+# HERITABLE TEST
+#####################################
+
+set(TEST_NAME HeritableTest)
+
+set(TEST_SOURCES
+        HeritableTest.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/exception/Exception.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/Formatter.cpp
+    )
+
+set(TEST_LIST
+        constructor_int
+        constructor_parent
+        ptr_operator_parent
+        compare_operator_parent
+        access_data_methods_parent
+        cast_methods
+        cast_methods_negative
+        serialize_operator
+        inheritance_set_test
+    )
+
+set(TEST_EXTRA_LIBRARIES
+        fastcdr
+        fastrtps
+    )
+
+add_unittest_executable(
+        "${TEST_NAME}"
+        "${TEST_SOURCES}"
+        "${TEST_LIST}"
+        "${TEST_EXTRA_LIBRARIES}"
+    )
