Extend custom enumeration API: string_to_enumeration
Signed-off-by: Juan López Fernández <juanlopez@eprosima.com>

--- a/cpp_utils/test/unittest/macros/CMakeLists.txt
+++ b/cpp_utils/test/unittest/macros/CMakeLists.txt
@@ -90,6 +90,7 @@ set(TEST_SOURCES
 
 set(TEST_LIST
         show_how
+        string_to_enumeration
         from_string
         to_string
         serializator
