Implement Stdcin Waiter
Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/cpp_utils/test/unittest/CMakeLists.txt
+++ b/cpp_utils/test/unittest/CMakeLists.txt
@@ -26,5 +26,6 @@ add_subdirectory(return_code)
 add_subdirectory(testing)
 add_subdirectory(thread_pool)
 add_subdirectory(time)
+add_subdirectory(user_interface)
 add_subdirectory(utils)
 add_subdirectory(wait)
