Add to_uppercase tests
Signed-off-by: RaulSanchez <raul@eprosima.com>

--- a/cpp_utils/test/unittest/utils/CMakeLists.txt
+++ b/cpp_utils/test/unittest/utils/CMakeLists.txt
@@ -28,6 +28,7 @@ set(TEST_LIST
         set_of_ptr_contains_string
         are_set_of_ptr_equal_int
         to_lowercase
+        to_uppercase
         tsnh_call
         is_file_accessible
         combined_file_permissions
