--- a/cpp_utils/test/unittest/collection/database/CMakeLists.txt
+++ b/cpp_utils/test/unittest/collection/database/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright 2021 Proyectos y Sistemas de Mantenimiento SL (eProsima).
+# Copyright 2023 Proyectos y Sistemas de Mantenimiento SL (eProsima).
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,21 +12,30 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Add test subdirectories
-add_subdirectory(collection)
-add_subdirectory(enum)
-add_subdirectory(event)
-add_subdirectory(exception)
-add_subdirectory(file)
-add_subdirectory(types)
-add_subdirectory(macros)
-add_subdirectory(math)
-add_subdirectory(math/random)
-add_subdirectory(memory)
-add_subdirectory(return_code)
-add_subdirectory(testing)
-add_subdirectory(thread_pool)
-add_subdirectory(time)
-add_subdirectory(user_interface)
-add_subdirectory(utils)
-add_subdirectory(wait)
+set(TEST_NAME SimpleDatabaseTest)
+
+set(TEST_SOURCES
+        SimpleDatabaseTest.cpp
+    )
+
+set(TEST_LIST
+        create
+        add
+        is
+        get
+        iterate
+        test_custom_classes
+        test_unique_ptrs
+    )
+
+set(TEST_EXTRA_LIBRARIES
+        fastcdr
+        fastrtps
+    )
+
+add_unittest_executable(
+        "${TEST_NAME}"
+        "${TEST_SOURCES}"
+        "${TEST_LIST}"
+        "${TEST_EXTRA_LIBRARIES}"
+    )
