--- a/cpp_utils/test/unittest/collection/database/CMakeLists.txt
+++ b/cpp_utils/test/unittest/collection/database/CMakeLists.txt
@@ -27,7 +27,7 @@ set(TEST_LIST
         size
         iterate
         modify
-        test_erase
+        erase
         add_or_modify
         test_thread_safe
         test_custom_classes
