Database interfaces and an implementation (#49)
* Implementation of Database

Signed-off-by: jparisu <javierparis@eprosima.com>

* Implement SimpleDatabase

Signed-off-by: jparisu <javierparis@eprosima.com>

* Add tests

Signed-off-by: jparisu <javierparis@eprosima.com>

* Final design and implementation of Database

Signed-off-by: jparisu <javierparis@eprosima.com>

* Add documentation to SafeDatabase

Signed-off-by: jparisu <javierparis@eprosima.com>

* change shared_mutex for timed_shared_mutex

Signed-off-by: jparisu <javierparis@eprosima.com>

* move impl iterator to ipp

Signed-off-by: jparisu <javierparis@eprosima.com>

* Add copy methods

Signed-off-by: jparisu <javierparis@eprosima.com>

* fix windows problem

Signed-off-by: jparisu <javierparis@eprosima.com>

* Fix error due to windows shared mutex design

Signed-off-by: jparisu <javierparis@eprosima.com>

* apply suggestions

Signed-off-by: jparisu <javierparis@eprosima.com>

* apply suggestion in test

Signed-off-by: jparisu <javierparis@eprosima.com>

* uncrustify

Signed-off-by: jparisu <javierparis@eprosima.com>

---------

Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/cpp_utils/test/unittest/collection/CMakeLists.txt
+++ b/cpp_utils/test/unittest/collection/CMakeLists.txt
@@ -12,30 +12,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-set(TEST_NAME CommandReaderTest)
-
-set(TEST_SOURCES
-        CommandReaderTest.cpp
-    )
-all_library_sources("${TEST_SOURCES}")
-
-set(TEST_LIST
-        trivial_create
-        read_lines_enum_1
-        read_lines_enum_1_negative
-        read_lines_enum_2_singleton
-    )
-
-set(TEST_EXTRA_LIBRARIES
-        fastcdr
-        fastrtps
-        cpp_utils
-    )
-
-add_unittest_executable(
-    "${TEST_NAME}"
-    "${TEST_SOURCES}"
-    "${TEST_LIST}"
-    "${TEST_EXTRA_LIBRARIES}"
-    "${TEST_NEEDED_SOURCES}"
-)
+# Add test subdirectories
+add_subdirectory(database)
