--- a/cpp_utils/test/unittest/CMakeLists.txt
+++ b/cpp_utils/test/unittest/CMakeLists.txt
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 # Add test subdirectories
+add_subdirectory(collection)
 add_subdirectory(enum)
 add_subdirectory(event)
 add_subdirectory(exception)
