--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -319,20 +319,11 @@ jobs:
       - name: Install Python packages
         uses: ./src/dev-utils/.github/actions/install-python-packages
 
-      - name: Get build eProsima dependencies Job Id
-        run: |
-          export JOB_ID=$(curl -sL $GITHUB_API_URL/repos/$GITHUB_REPOSITORY/actions/workflows/build_dependencies.yml/runs | \
-            jq '.workflow_runs[] | select(.status == "completed") | .id' | \
-            head -n 1)
-          echo "fastdds_job_id=${JOB_ID}" >> $GITHUB_ENV
 
-      - name: Download eProsima dependencies
-        uses: dawidd6/action-download-artifact@v2
-        with:
-          workflow: build_dependencies.yml
-          path: /home/runner/work/fastdds/install
-          name: ${{ matrix.ubuntu-version }}_eprosima_dependencies_install
-          run_id: ${{ env.fastdds_job_id }}
+      - name: Fetch repositories
+        run: |
+          vcs import src <  src/dev-utils/.github/workflows/configurations/ci.repos
+
 
       - name: Update colcon mixin
         run: |
@@ -343,7 +334,6 @@ jobs:
 
       - name: Build workspace
         run: |
-          source /home/runner/work/fastdds/install/setup.bash
           colcon build \
             --event-handlers=console_direct+ \
             --cmake-args -DBUILD_TESTS=ON -DCMAKE_BUILD_TYPE=${{ matrix.cmake-config }}
