Add safe check of architecture to avoid cmake failure when finding cmake_utils
Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/cpp_utils/CMakeLists.txt
+++ b/cpp_utils/CMakeLists.txt
@@ -17,6 +17,15 @@
 ###############################################################################
 cmake_minimum_required(VERSION 3.5)
 
+# TODO this should not be done as it is not portable to other architectures
+# However, this is required as this variable is not set until project() is called.
+# In the future configure_project() must change to be called after project() and we must refactor
+# the repositories using cmake_utils so they call project() BEFORE find_package().
+# Thus this is work for future annapurna team.
+if (NOT CMAKE_SIZEOF_VOID_P)
+    set(CMAKE_SIZEOF_VOID_P 8)
+endif()
+
 ###############################################################################
 # Find package cmake_utils
 ###############################################################################
