Add docstring and test
Signed-off-by: Juan López Fernández <juanlopez@eprosima.com>

--- a/cpp_utils/test/unittest/utils/CMakeLists.txt
+++ b/cpp_utils/test/unittest/utils/CMakeLists.txt
@@ -35,6 +35,7 @@ set(TEST_LIST
         split_string_one_delimiter
         split_strings_one_delimiter
         split_string_delimiters
+        get_keys
     )
 
 set(TEST_EXTRA_LIBRARIES
