Add tests and docs
Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/cpp_utils/test/unittest/types/CMakeLists.txt
+++ b/cpp_utils/test/unittest/types/CMakeLists.txt
@@ -28,6 +28,7 @@ set(TEST_LIST
         default_construct
         construct
         assign_operator
+        arrow_operator
     )
 
 set(TEST_EXTRA_LIBRARIES
