tmp check tsan in ubuntu 20
Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -148,7 +148,14 @@ jobs:
 # TSAN
 
   tsan:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - ubuntu-20.04  # TODO remove when TSAN test is fixed
+          - ubuntu-22.04
+
     steps:
 
       - name: Sync repository
@@ -159,7 +166,7 @@ jobs:
       - name: Download dependencies and install requirements
         uses: ./src/.github/actions/project_dependencies
         with:
-          os: ubuntu-22.04
+          os: ${{ matrix.os }}
           cmake_build_type: Release
           dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix || env.default_dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
