--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -148,14 +148,10 @@ jobs:
 # TSAN
 
   tsan:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os:
-          - ubuntu-20.04  # TODO remove when TSAN test is fixed
-          - ubuntu-22.04
-
+    # NOTE: there is a known issue in TSAN 20.04 with std::condition_variable::wait_for
+    # https://github.com/google/sanitizers/issues/1259
+    # Until this is fixed, we use 20.04 for TSAN work
+    runs-on: ubuntu-20.04
     steps:
 
       - name: Sync repository
@@ -166,7 +162,7 @@ jobs:
       - name: Download dependencies and install requirements
         uses: ./src/.github/actions/project_dependencies
         with:
-          os: ${{ matrix.os }}
+          os: ubuntu-20.04
           cmake_build_type: Release
           dependencies_artifact_postfix: ${{ github.event.inputs.dependencies_artifact_postfix || env.default_dependencies_artifact_postfix }}
           secret_token: ${{ secrets.GITHUB_TOKEN }}
