--- a/cpp_utils/test/unittest/CMakeLists.txt
+++ b/cpp_utils/test/unittest/CMakeLists.txt
@@ -24,6 +24,7 @@ add_subdirectory(math)
 add_subdirectory(math/random)
 add_subdirectory(memory)
 add_subdirectory(return_code)
+add_subdirectory(ros2_mangling)
 add_subdirectory(testing)
 add_subdirectory(thread_pool)
 add_subdirectory(time)
