--- a/cpp_utils/test/unittest/ros2_mangling/CMakeLists.txt
+++ b/cpp_utils/test/unittest/ros2_mangling/CMakeLists.txt
@@ -54,6 +54,7 @@ set(TEST_LIST
 set(TEST_EXTRA_LIBRARIES
         fastcdr
         fastrtps
+        $<$<BOOL:${WIN32}>:iphlpapi$<SEMICOLON>Shlwapi>
     )
 
 add_unittest_executable(
