--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -161,12 +161,12 @@ jobs:
           secret_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Compile and run tests
-        env:
-          # GCC 11.3 (Ubuntu Jammy default) produces several false positives regarding timed synchronization protocols
-          # These issues were fixed in GCC 12 so we upgrade to that version.
-          CC: gcc-12
-          CXX: g++-12
-        uses: eProsima/eProsima-CI/multiplatform/tsan_build_test@v0
+        # env:
+        #   # GCC 11.3 (Ubuntu Jammy default) produces several false positives regarding timed synchronization protocols
+        #   # These issues were fixed in GCC 12 so we upgrade to that version.
+        #   CC: gcc-12
+        #   CXX: g++-12
+        uses: eProsima/eProsima-CI/multiplatform/tsan_build_test@feature/tsan-gcc-upgrade
         with:
           packages_names: ${{ env.cpp_packages_names }}
           workspace_dependencies: './install'
